--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: TerraCraft
 version: '1.0-SNAPSHOT'
 main: io.github.tanice.terraCraft.bukkit.TerraCraftBukkit
-api-version: '1.21'
+api-version: '1.21.4'
 
-depend: ["PlaceholderAPI"]
+depend: ["packetevents"]
