--- a/src/main/resources/config/items/example-items.yml
+++ b/src/main/resources/config/items/example-items.yml
@@ -135,7 +135,7 @@
   lore_template: default
   lore:
     - <gradient:#fcd228:#fc4828>测试防御后减伤_苹果测试</gradient>
-    - 我可能可以帮你当一剑？
+    - 我可能可以帮你躲一剑？
   hold_buff:
     - 测试闪避
   skills:
@@ -148,19 +148,15 @@
   custom_model_data: 2000
   display_name: <yellow>力量宝石V</yellow>
   type: gem
-  # 宝石默认无法破坏
+  chance: 0.9  # 镶嵌成功率  默认为 1
+  loss_when_failed: true  # 镶嵌失败是否修丢失
+  unbreakable: true
   hide_flags:
     - UNBREAKABLE
   lore:
     - "这是一个宝石1"
-  lore_template: default
-  # 计算方式BASE表示是在白值计算
-  # 其余的方式单独乘算，且计算完成后的值作为武器的白值
-  calculate_type: ADD  # 默认为BASE
   attrs:
-    attack_damage: -0.1  # 伤害减少10%
-  chance: 0.9  # 镶嵌成功率  默认为 1
-  loss_when_failed: true  # 镶嵌失败是否修丢失
+    attack_damage: -0.1  # 伤害减少0.1
 
 测试宝石2:
   id: coal
@@ -168,7 +164,6 @@
   type: gem
   lore:
     - "这是一个宝石2"
-  lore_template: default
   attrs:
     attack_damage: +10
 
