--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,14 +1,14 @@
 name: TerraCraft
 version: '1.0-SNAPSHOT'
 main: io.github.tanice.terraCraft.bukkit.TerraCraftBukkit
-api-version: '1.21.8'
+api-version: '1.20'
 description: 'RPG item manager and buff manager with mm skills'
 author: TaniceWhite
 website: 'https://github.com/Tanice-White/TerraCraft'
 load: STARTUP
 
 prefix: TerraCraft
-depend: [packetevents]
+depend: [packetevents, NBTAPI]
 softdepend: [MythicMobs]
 loadbefore: [MythicMobs]
 
