--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -8,7 +8,7 @@ website: 'https://github.com/Tanice-White/TerraCraft'
 load: STARTUP
 
 prefix: TerraCraft
-depend: [packetevents, NBTAPI]
+depend: [NBTAPI]
 softdepend: [MythicMobs]
 loadbefore: [MythicMobs]
 
