--- a/src/main/resources/config/items/example-items.yml
+++ b/src/main/resources/config/items/example-items.yml
@@ -1,4 +1,5 @@
 全知全能:
+  id: book
   display_name: "<red>测试用的"
   custom_model_data: 10086
   dyed_color: 0xFF5500
@@ -17,8 +18,8 @@
       amount: 0.2
       operation: add_value
       slot: mainhand
-  blocks_attacks:
-    delay_seconds: 2
+  shield:
+    delay_seconds: 0
     base: 1
     factor: 0.5
     threshold: 90
@@ -29,8 +30,7 @@
         base: 4
         factor: 0.5
         angle: 180
-        types:  # 此规则对哪些伤害有效，未指定则对所有伤害有效
-          - magic
+        type: is_player_attack
     block_sound:
       id: block.campfire.crackle
       range: 8
@@ -81,6 +81,7 @@
   equippable:
     allow:
       - player
+      - zombie
     # asset: 装备模型命名空间ID
     # camera: 纹理命名空间ID   例子：带上南瓜头的玩家视角纹理
     can_shear: true
@@ -95,7 +96,7 @@
     slot: head
     swappable: true
   food:
-    always_eat: false     # 是否可随时食用（无视饱食度）
+    always_eat: true     # 是否可随时食用（无视饱食度）
     nutrition: 8          # 饱食度
     saturation: 0.6       # 饱和
   glider:  # 写了就行, 无视值
@@ -133,15 +134,44 @@
   tooltip:
     hide_tooltip: false  # 不隐藏提示框
     hide_tags:  # 1.20.5之后写组件名，之前写hide_flags中的值
-      - attribute
+      - attribute_modifiers
     # style: 物品提示框外观命名空间id
   use_cooldown:
     group: terra_group_1  # 同组物品的冷却共享
     seconds: 5
   use_remainder:
-    id: snowball
+    id: axolotl_bucket
     component: "{\"custom_name\":\"??\"}"  # 正常格式：{custom_name:'{"color":"yellow","text":"打咩哟"}'}
     count: 1
   weapon:
     disable_shield_seconds: 5
     damage_per_attack: 2
+
+
+谢版盾牌:
+  id: feather
+  display_name: "<red>测试用的盾牌"
+  max_stack_size: 1
+  shield:
+    delay_seconds: 0
+    base: 7
+    factor: 0.5
+    threshold: 5
+    pass: arrow
+    cooldown_scale: 1
+    reduction:  # 未指定能阻挡一切伤害
+      random_key:
+        base: 4
+        factor: 0.5
+        angle: 180
+    block_sound:
+      id: block.campfire.crackle
+      range: 8
+    disable_sound:
+      id: block.end_portal.spawn
+      range: 16
+  break_sound:
+    id: block.end_portal_frame.fill
+    range: 16
+  resistant: is_fire
+  rarity: epic  # COMMON,UNCOMMON,RARE,EPIC,
