--- a/src/main/resources/config/buffs/example-buff.yml
+++ b/src/main/resources/config/buffs/example-buff.yml
@@ -1,41 +1,55 @@
+# 以yml配置的都是 Attribute 类 buff
+# 特征: meta
+
+# 以js配置的buff都是 runnable类buff, 其中如果 section是timer则会变为timerBuff
+# runnable 特征 js配置文件名称即内部名
+# timerBuff 特征 cd
 全面增益测试:
+  display_name: "<yellow> 神迹"
   enable: true
-  # 具体属性
   priority: 0
-  # BASE ADD MULTIPLY FIX 用于计算
-  # 其余的只有run函数有用，其他属性无效
-  calculate_type: BASE # 必写（基础属性，不能自定义行为，只能在伤害计算中被动使用）
-  role_condition: all  # attacker defender all -> 决定 buff 持有者作为哪一方能够生效
-  damage: 0
-  armor: 100
-  critical_strike_chance: 0.8
-  critical_strike_damage: 1.5
-  armor_toughness: 0
-  pre_armor_reduction: 0
-  after_armor_reduction: 0
-  mana_cost: -0.1
-  skill_cooldown: -0.1
-  # 玩家伤害属性增加
-  melee: 0.1  # 战士伤害
-  magic: 0.1  # 法师伤害
-  ranged: 0.1 # 射手伤害
-  rouge: 0.1  # 盗贼伤害
-  summon: 0.1 # 召唤伤害
-  other: 0.01 # 其他
+  chance: 1
+  # BASE ADD MULTIPLY FIX 用于计算 其余的只有run函数有用，其他属性无效
+  section: base # 必写（基础属性，不能自定义行为，只能在伤害计算中被动使用）
+  condition: all  # attacker defender all -> 决定 buff 持有者作为哪一方能够生效
+  duration: 200  # 正常获取的持续tick
+  mutex:  # 和本buff冲突的buff名  用逗号分隔 "冲突buff1,冲突buff2,...."
+  override: "持续掉血" # 本buff会覆盖的buff名
+  meta:
+    damage: 0
+    armor: 100
+    critical_strike_chance: 0.8
+    critical_strike_damage: 1.5
+    armor_toughness: 0
+    pre_armor_reduction: 0
+    after_armor_reduction: 0
+    mana_cost: -0.1
+    skill_cooldown: -0.1
+    # 玩家伤害属性增加
+    melee: 0.1  # 战士伤害
+    magic: 0.1  # 法师伤害
+    ranged: 0.1 # 射手伤害
+    rouge: 0.1  # 盗贼伤害
+    summon: 0.1 # 召唤伤害
+    environment: 0.1  # 环境
+    other: 0.01 # 其他
 
 测试增益_1_damage_add:
   priority: 0
-  calculate_type: ADD
+  section: ADD
   chance: 0.5  # 作为 attack_buff 时有效，概率为对方挂上 buff
-  damage: 0.5  # 在加算区，伤害提升 50%
+  meta:
+    damage: 0.5  # 在加算区，伤害提升 50%
 
 测试增益_2_damage_mul:
   priority: 0
-  calculate_type: MULTIPLY
-  damage: 0.5
+  section: MULTIPLY
+  meta:
+    damage: 0.5
 
 测试增益_3_damage_fix:
   priority: 0
-  calculate_type: FIX
-  damage: 0.5
+  section: FIX
+  meta:
+    damage: 0.5
 
