add attribute change listener but only for version equal or after 1.21.4

--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,7 @@ dependencies {
     // MiniMessage
     implementation("net.kyori:adventure-text-minimessage:4.22.0")
     // asm
-//    implementation("org.ow2.asm:asm:9.8")
+    implementation("org.ow2.asm:asm:9.8")
 }
 
 shadowJar {
