--- a/src/main/resources/config/terra_component_example.yml
+++ b/src/main/resources/config/terra_component_example.yml
@@ -2,7 +2,7 @@
 
 # "自定义buff名称 #持续tick :触发间隔 %给予概率"
 buff:
-  updatable: false # 默认为true
+  updatable: true # 默认为true
   hold:  # hold的buff持续时间是永久的 概率100%给予自己 # 非Timer类buff的cd(触发间隔)配置无效
     - "全面增益测试"
   attack_self:  # 攻击后给自己的buff
@@ -14,36 +14,45 @@ buff:
   defence:  # 被攻击后给对方的buff
     - 自定义buff4
 
-commands:  # @self会被替换成使用者
-  - "give @self minecraft:arrow 5"
-  - "effect give @self minecraft:strength 30 1"
+command:  # @self会被替换成使用者
+  updatable: true # 默认为true
+  content:
+    - "give @self minecraft:arrow 5"
+    - "effect give @self minecraft:strength 30 1"
 
-damage_type: MELEE  # 默认Other  # 可取值 MELEE,MAGIC,RANGED,ROUGE,SUMMON,OTHER,ENVIRONMENT
+damage_type:
+  updatable: true # 默认为true
+  type: melee  # 默认Other  # 可取值 MELEE,MAGIC,RANGED,ROUGE,SUMMON,OTHER,ENVIRONMENT
 
 terra_durability:
+  updatable: true # 默认为true
   damage: 5
   max_damage: 10
   break_loss: false
 
 gem:
+  updatable: true # 默认为true
   inlay_chance: 0.7  # 镶嵌成功概率
   inlay_fail_loss: false
   dismantle_chance: 0.6  # 拆卸成功概率
   dismantle_fail_loss: false
 
 gem_holder:
+  updatable: true # 默认为true
   limit: 2  # 宝石槽位数量限制
   gems:
     - 宝石物品内部名
 
 level:
+  updatable: true # 默认为true
   lvl: 0  # 设置等级
   template: 等级模板内部名
 
-terra_meta:
+meta:
+  updatable: true # 默认为true
   section: base  # 可选 TIMER, BEFORE_DAMAGE, BASE, ADD, MULTIPLY, FIX, BETWEEN_DAMAGE_AND_DEFENCE, AFTER_DAMAGE, ERROR, INNER
   # 其中 BASE, ADD, MULTIPLY, FIX 表示计算meta 其余的会运行js脚本
-  meta:
+  attribute:
     damage: 0
     armor: 100
     critical_strike_chance: 0.8
@@ -63,9 +72,15 @@ terra_meta:
     other: 0.01 # 其他
 
 quality:
+  updatable: true # 默认为true
   group: 可用品质组名
   quality: 默认品质名
 
-skills:
-  - skill文件夹配置的Terra内部名称(不是Mythic名称)
-  - skill2
+skill:
+  updatable: true
+  content:
+    - skill文件夹配置的Terra内部名(不是Mythic名称)
+
+slot:  # meta数据生效的槽位（如果有gem组件则无视--gem除了在槽位上，无法在任何其他位置生效）
+  updatable: true # 默认为true
+  content: mainhand  # offhand head chest legs feet
