--- a/src/main/resources/config/config.yml
+++ b/src/main/resources/config/config.yml
@@ -17,15 +17,15 @@ database:
 generate_examples: true  # true
 
 # 是否取消原版暴击特效, 伤害特效
-cancel_generic_particles: true  # false
+# cancel_generic_particles: true  # false
 
 # 是否生成伤害文本显示
-generate_damage_indicator: true  # false
+# generate_damage_indicator: true  # false
 # 以下配置在 generate_damage_indicator 为 true 才生效
-default_prefix: "§6"  # 非暴击指示器颜色
-critical_prefix: "§4" # 暴击指示器颜色
-critical_large_scale: 2 # 所有指示器默认放大1.5倍
-view_range: 20.0  # 可见范围
+#default_prefix: "§6"  # 非暴击指示器颜色
+#critical_prefix: "§4" # 暴击指示器颜色
+#critical_large_scale: 2 # 所有指示器默认放大1.5倍
+#view_range: 20.0  # 可见范围
 
 # 防御伤害抵消乘数
 world_k: 1  # 1点防御抵消 k点伤害
