--- a/src/main/resources/config/levels/example-level.yml
+++ b/src/main/resources/config/levels/example-level.yml
@@ -1,10 +1,9 @@
-# 要求和 quality一样 不识别颜色代码
 示例武器升级模板:
-  # 仅仅识别以下key
   begin: 0  # 初始等级  必须, 默认 0
   max: 20  # 最大等级  必须, 默认 100
-  level_up_need: 可食用物内部名  # TwItems inner Name
+  level_up_need: "升级材料"  # terra name
   chance: 0.8  # 每次有0.8的概率成功
   level_down_when_failed: false  # 失败是否丢降级 默认为false
-  attrs:
+  section: base  # 计算区
+  attribute:
     attack_damage: 1
