--- a/src/main/resources/config/items/example-items.yml
+++ b/src/main/resources/config/items/example-items.yml
@@ -248,8 +248,10 @@ TerraMeta测试武器:
     template: "示例武器升级模板"
   quality:  # 展示有问题
     updatable: true # 默认为true
-    group: 可用品质组名
-    default: 默认品质名
+    groups:
+      - "测试品质组名"
+      - "伤害测试组"
+    default: # 默认品质名
 #  terra_durability  # 耐久展示有问题
 
 TerraGem伤害增加测试:
